test/classes/initializers/parentCall/inOn.good
inOn.chpl:4: In initializer:
inOn.chpl:7: error: use of this.initDone() call in an on block
